--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cientifico</title>
+    <title>Rick & Morty</title>
     <link type="text/css" href="styles.css" rel="stylesheet">
 </head>
 <body>
